<resources>
    <string name="app_name">Splitwise_Clone</string>


    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_to_splitwise_pravin">Welcome to Splitwise, Pravin!</string>
    <string name="splitwise_friends">Splitwise keeps track of balances between friends</string>
    <string name="introOfFrag">You can split expenses with group or individuals</string>
    <string name="tap_anywhere_to_begin">Tap anywhere to begin.</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="scan_code">Scan Code</string>
    <string name="settings">Settings</string>





    <string name="split_wise">Splitwise</string>
    <string name="total_balance">TOTAL BALANCE</string>
    <string name="you_are_all_settled_up">you are all settled up</string>
    <string name="add_more_friends">ADD MORE FRIENDS</string>
    <string name="start_a_new_group">START A NEW GROUP</string>
    <string name="setting">Settings</string>
    <string name="splitwise_pro">SPLITWISE PRO</string>
    <string name="account_setting">ACCOUNT SETTING</string>
    <string name="email_setting">EMAIL SETTING</string>
    <string name="notification">DEVICE AND PUSH NOTIFICATION SETTINGS</string>
    <string name="passcode">PASSCODE</string>
    <string name="add_expense">Add expense</string>
    <string name="save">SAVE</string>
    <string name="with_you_and">With you and : </string>
    <string name="enter_name_email_phone">Enter names, emails, or phone</string>
    <string name="enter_description">Enter a description</string>
    <string name="paid_by">Paid by</string>
    <string name="you">YOU</string>
    <string name="and_split">and split</string>
    <string name="equally">EQUALLY</string>
    <string name="today">Today</string>
    <string name="no">No</string>
    <string name="create_a_group">Create a group</string>
    <string name="apartment">Apartment</string>
    <string name="house">House</string>
    <string name="trip">Trip</string>
    <string name="other">Other</string>
    <string name="group_name">Group name</string>
    <string name="enter_a_group_name">Enter a group name</string>
    <string name="advanced_setting">Advanced settings</string>
    <string name="simplify_group_debts">Simplify group debts</string>
    <string name="you_will_be_able">You will be able to add group</string>
    <string name="members_after">members after you save this new</string>
    <string name="group">group.</string>
    <string name="splitwise_will_not_combine">Splitwise will not combine debts in this group,</string>
    <string name="even_if_there_are">even if there are unnecessary extra payments.</string>
    <string name="notes">Notes</string>
    <string name="there_is_no_activity">There is no activity in your account yet.
    Tryadding an expense!</string>

    <string name="login_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="terms">Terms</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact us</string>
    <string name="your_email_address">Your email address</string>
    <string name="your_password">Your password address</string>
    <string name="back">BACK</string>
    <string name="done">DONE</string>
    <string name="forgot_password">Forgot your password </string>
    <string name="full_name">Full name </string>
    <string name="by_signing_up">By signing up, you accept the Splitwise Terms of Service</string>
    <string name="add_friends_on_spliwise">Add Friends on Spliwise</string>
    <string name="groups">Groups</string>
    <string name="activity">Activity</string>
    <string name="friends">Friends</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>