<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_ScaneCode"
            android:icon="@drawable/ic_baseline_qr_code_scanner_24"
            android:title="@string/scan_code" />

        <item
            android:id="@+id/nav_Contact"
            android:icon="@drawable/ic_baseline_email_24"
            android:title="@string/contact_us" />

    </group>
</menu>