<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sanjoy.GroupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mint_leaf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvBackArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:drawableStart="@drawable/back_arrow"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:text="@string/create_a_group"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvBackArrow"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/saveGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_18"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/ivCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:background="@drawable/circle_dotted"
        android:padding="@dimen/dp_30"
        android:src="@drawable/add_a_photo_24"
        app:layout_constraintBottom_toTopOf="@+id/llLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clLayout" />

    <TextView
        android:id="@+id/tvGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:text="@string/group_name"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/ivCamera"
        app:layout_constraintTop_toTopOf="@id/ivCamera" />

    <EditText
        android:id="@+id/etGroupName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_5"
        android:hint="@string/enter_a_group_name"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toStartOf="@id/etSize"
        app:layout_constraintStart_toStartOf="@id/tvGroupName"
        app:layout_constraintTop_toBottomOf="@id/tvGroupName" />

    <EditText
        android:id="@+id/etSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_25"
        android:hint="size"
        android:inputType="number"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etGroupName"
        app:layout_constraintTop_toBottomOf="@id/tvGroupName" />

    <LinearLayout
        android:id="@+id/llLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:gravity="center"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etGroupName">

        <TextView
            android:id="@+id/tvApartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#1CC29F"
            android:gravity="center"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/apartment"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvHouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/shadow_steel"
            android:gravity="center"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/house"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/shadow_steel"
            android:gravity="center"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/trip"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/shadow_steel"
            android:gravity="center"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/other"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:src="@drawable/group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llLayout" />

    <TextView
        android:id="@+id/tvYouWillBeAble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:text="@string/you_will_be_able"
        app:layout_constraintBottom_toTopOf="@id/tvMembersAfterYou"
        app:layout_constraintStart_toEndOf="@id/ivContact"
        app:layout_constraintTop_toTopOf="@id/ivContact" />

    <TextView
        android:id="@+id/tvMembersAfterYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:text="@string/members_after"
        app:layout_constraintBottom_toTopOf="@id/tvGroup"
        app:layout_constraintStart_toEndOf="@id/ivContact"
        app:layout_constraintTop_toBottomOf="@id/tvYouWillBeAble" />

    <TextView
        android:id="@+id/tvGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:text="@string/group"
        app:layout_constraintBottom_toBottomOf="@id/ivContact"
        app:layout_constraintStart_toEndOf="@id/ivContact"
        app:layout_constraintTop_toBottomOf="@id/tvMembersAfterYou" />

    <TextView
        android:id="@+id/tvAdvancedSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="#d4d4d4"
        android:paddingStart="@dimen/dp_20"
        android:paddingTop="@dimen/dp_4"
        android:paddingBottom="@dimen/dp_4"
        android:text="@string/advanced_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGroup" />

    <TextView
        android:id="@+id/tvSimplifyGroupDebts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/simplify_group_debts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAdvancedSettings" />

    <ImageView
        android:id="@+id/ivSimplifyOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:src="@drawable/simplify_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSimplifyGroupDebts" />

    <TextView
        android:id="@+id/tvSplitwiseWillNotCombine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/splitwise_will_not_combine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSimplifyOff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/even_if_there_are"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSplitwiseWillNotCombine" />
</androidx.constraintlayout.widget.ConstraintLayout>